fix background on ios

--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -14,6 +14,12 @@
     }
 }
 
+@supports ( -webkit-touch-callout : none) {
+    .content {
+        background-attachment: scroll;
+    }
+}
+
 .center {
     padding-top: 4%;
     text-align: center;
